cp project/force-app/main/default/objects/Agreement__c/Agreement__c.object-meta.xml
<CustomObject>
    <description>Sale Agreement contracts approved by Legal and signed before demands.</description>
    <label>Agreement</label>
    <nameField>
        <displayFormat>AGR-{0000}</displayFormat>
        <label>Agreement Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>