cp project/force-app/main/default/objects/Agreement__c/fields/Agreement_Document__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Document</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements_Doc</relationshipName>
    <type>Lookup</type>
</CustomField>