cp project/force-app/main/default/objects/Agreement__c/fields/Agreement_Ref__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Ref__c</fullName>
    <label>Agreement Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>