cp project/force-app/main/default/objects/Agreement__c/fields/Agreement_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Request_Date__c</fullName>
    <label>Agreement Request Date</label>
    <type>Date</type>
</CustomField>