cp project/force-app/main/default/objects/Agreement__c/fields/Legal_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approval_Date__c</fullName>
    <label>Legal Approval Date</label>
    <type>Date</type>
</CustomField>