cp project/force-app/main/default/objects/Agreement__c/fields/Legal_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Legal_Remarks__c</fullName>
    <label>Legal Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>