cp project/force-app/main/default/objects/Agreement__c/fields/Signed_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Signed_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Agreement</label>
    <type>Checkbox</type>
</CustomField>