cp project/force-app/main/default/objects/Agreement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Agreement Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Under Legal Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Legal Approved</fullName>
                <isActive>false</isActive>
                <label>Legal Approved</label>
            </value>
            <value>
                <fullName>Signed &amp; Uploaded</fullName>
                <isActive>false</isActive>
                <label>Signed &amp; Uploaded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>